# wisprflow-alternative

./: README.md  index.html  overlay.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  MEETING_TRANSCRIPTION_RESEARCH.md
docs/plans/: advanced-voice-command-agent-plan.md
extension/: CHANGELOG.md  README.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
extension/src/: create-ai-command.tsx  create-snippet.tsx  index.tsx  polish-clipboard.tsx  run-ai-command.tsx  search-snippets.tsx  storage.ts  transcribe-audio.tsx  transcript-memory.tsx  words-glossary.tsx
scripts/: fetch-fleurs-hindi-samples.py  test-sarvam-hindi-batch.mjs  test-sarvam-hindi-sample.mjs
src/: main.ts  overlay.css  overlay.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
test-assets/hindi-samples/: 2815903452265068889.txt  4887139028898752213.txt  579454037541708253.txt
