[package]
name = "app"
version = "0.1.0"
description = "FlowDesk desktop dictation app"
authors = ["Nextbase"]
license = "UNLICENSED"
repository = "https://github.com/dix105/deskflow"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
arboard = "3"

[target.'cfg(windows)'.dependencies]
cpal = "0.16"
oww-rs = "0.2"
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Threading", "Win32_System_Variant", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
